package br.com.academiadev.domain.enums;

public enum DifficultyLevel {
    BEGINNER,
    INTERMEDIATE,
    ADVANCED
}
